src/tests/InvalidTests/TestInvalidForLoop.agl
for i in "aa" .. 10 do {
    print "AA";
}
